fixed problem with view on mobile devices

--- a/static/site_static/css/style.css
+++ b/static/site_static/css/style.css
@@ -1,6 +1,10 @@
-html {
-  overflow-x: hidden;
+
+@media (max-width: 768px) {
+html, body {
+width: auto !important;
+overflow-x: hidden !important;
 }
+
 
 body {
   background: #fff;
@@ -10,6 +14,8 @@ body {
   font-weight: 300;
   color: #999999;
 }
+
+
 
 a {
   -webkit-transition: .3s all ease;
